--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ in San Jose.
   </footer>
+
+  <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
